[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/shark/shark_3.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/shark/shark_4.png" type="Texture" id=3]
[ext_resource path="res://assets/shark/shark_5.png" type="Texture" id=4]
[ext_resource path="res://assets/shark/shark_6.png" type="Texture" id=5]
[ext_resource path="res://assets/shark/shark_1.png" type="Texture" id=6]
[ext_resource path="res://assets/shark/shark_2.png" type="Texture" id=7]
[ext_resource path="res://assets/shark/shark_attack_3.png" type="Texture" id=8]
[ext_resource path="res://assets/shark/shark_attack_1.png" type="Texture" id=9]
[ext_resource path="res://assets/shark/shark_attack_4.png" type="Texture" id=10]
[ext_resource path="res://assets/shark/shark_attack_2.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ) ],
"loop": false,
"name": "attack",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 13.5
height = 38.3333

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23, 17.3333 )

[node name="Enemy" type="Node2D"]
script = ExtResource( 2 )

[node name="Texture" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="DamageArea" type="StaticBody2D" parent="."]
visible = false

[node name="Collision" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( -1.33333, 0.5 )
rotation = 1.5708
scale = Vector2( 1, -1 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -0.666669, -0.333334 )
scale = Vector2( 3.73333, 2.56667 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -48, 2.33333 )
rotation = 1.5708
shape = SubResource( 4 )

[connection signal="animation_finished" from="Texture" to="." method="on_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="on_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="on_body_entered"]
